--- a/src/components/VideoPost.css
+++ b/src/components/VideoPost.css
@@ -7,11 +7,21 @@
   position: relative;
 }
 
+.video-post-container.full-height {
+  margin-top: 0;
+  height: 100%;
+}
+
 .video-wrapper {
   position: relative;
   width: 100%;
   padding-top: 56.25%; /* 16:9 aspect ratio */
   background: #000;
+}
+
+.video-wrapper.full-height {
+  padding-top: 0;
+  height: 100%;
 }
 
 .video-post {
